# smart-pdf-md

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  PyMuPDF')  agents.md  changelog.md  config.toml.example  coverage.pytest.xml  fast  license.md  main.py  marker_single')  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements-optional.in  requirements-optional.txt  requirements.txt  smart-pdf-md.bat  smart-pdf-md.py  smart-pdf-md.sh  smart_pdf_md_driver.py  temp.part  {out}
.github/: PULL_REQUEST_TEMPLATE.md  semantic.yml
.github/workflows/: ci.yml  publish.yml  release.yml  semantic-pr.yml
docs/: coverage.md  development.md
src/smart_pdf_md/: __init__.py  __main__.py  cli.py  config.py  core.py
src/smart_pdf_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backoff_and_cli.py  test_cli_and_paths_more.py  test_cli_error_and_dry_run.py  test_cli_options_extended.py  test_config_features.py  test_engine_overrides.py  test_engines_matrix.py  test_engines_optional.py  test_exit_and_heuristics.py  test_fast_path.py  test_marker_paths.py
