[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-pdf-md"
version = "0.1.0"
description = "Smart PDF → Markdown converter with fast text path and marker fallback"
readme = "readme.md"
requires-python = ">=3.11"
authors = [{name = "smart-pdf-md maintainers"}]
license = {text = "MIT"}
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
fast = [
  "PyMuPDF>=1.24",
]
marker = [
  "marker-pdf",
]

[project.urls]
Homepage = "https://github.com/supermarsx/smart-pdf-md"
Repository = "https://github.com/supermarsx/smart-pdf-md"

[project.scripts]
smart-pdf-md = "smart_pdf_md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
  ".git",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = false
show_error_codes = true
pretty = true
files = ["src"]

